Remove fluid from container

--- a/_src/find-a-meeting.njk
+++ b/_src/find-a-meeting.njk
@@ -6,7 +6,7 @@ pagination:
  size: 1000
 ---
 
-<div class="container-fluid">
+<div class="container">
   <div class="mb-5 text-center">
     <h2 class="h5 text-uppercase">Locations by county</h2>
     {%- for location in pagination.items %}
