--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -11,6 +11,14 @@ title: SA Utah (Sexaholics Anonymous Utah)
 <!doctype html>
 <html class="h-100" lang="en"{% if templateClass %} class="{{ templateClass }}"{% endif %}>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-149919556-2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-149919556-2');
+		</script>
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>{{ title }}</title>
