--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -39,9 +39,11 @@ title: SA Utah (Sexaholics Anonymous Utah)
 		</main>
 		<footer class="mt-auto py-5 bg-light">
 			<div class="container text-center">
-				<img id="logo-footer" src="{{ '/assets/uclt-logo.png' | url }}" alt="">
-				<p class="adr mt-4"><span class="street-address">4989 South State Street #57601</span>, <span>Murray</span>, <span class="region">Utah</span> <span class="postal-code">84107-0601</span></p>
-				<p><a href="tel:3857438872">(385) 743-8872</a></p>
+				{# <img id="logo-footer" src="{{ '/assets/uclt-logo.png' | url }}" alt=""> #}
+				<h3 class="text-uppercase h6 font-weight-bold" style="letter-spacing:0.2rem">Sexaholics Anonymous Utah Intergroup</h3>
+				<p class="adr mt-4"><span class="street-address">4989 South State Street #57601</span>, <span>Murray</span>, <span class="region">Utah</span> <span class="postal-code">84107-0601</span><br>
+					<a class="d-inline-block mx-3" href="mailto:saintergrouputah@gmail.com">saintergrouputah@gmail.com</a>
+					<a class="d-inline-block mx-3" href="tel:3857438872">(385) 743-8872</a></p>
 				<p class="text-muted">
 				&copy;
 				<script>document.write(new Date().getFullYear());</script>
