--- a/_src/meetings.njk
+++ b/_src/meetings.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-pageHeading: Meetings and Groups
+pageHeading: Meetings & Groups
 pagination:
  data: meetings.locations
  size: 1000
