--- a/_src/_includes/page.njk
+++ b/_src/_includes/page.njk
@@ -9,6 +9,6 @@ pageHeading: Default Title
     <h1 class="my-5 text-center text-white text-uppercase display-4 font-weight-bold">{{ pageHeading }}</h1>
   </div>
 </div>
-<div class="">
+<div class="mt-2 mt-sm-5">
 {{ content | safe }}
 </div>
