--- a/_src/_includes/partials/_nav.njk
+++ b/_src/_includes/partials/_nav.njk
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="{{ '/' | url }}">
         SA Utah
-        <img id="header-logo" src="{{ '/assets/uclt-logo.png' | url }}" alt="">
+        {# <img id="header-logo" src="{{ '/assets/uclt-logo.png' | url }}" alt=""> #}
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -12,10 +12,11 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="navbar-nav ml-auto">
           {# <a class="nav-item nav-link" href="#">Home</a> #}
-          <a class="nav-item nav-link" href="{{ '/find-a-meeting' | url }}">Find a Meeting</a>
-          <a class="nav-item nav-link" href="{{ '/for-newcomers' | url }}">For Newcomers</a>
+          <a class="nav-item nav-link" href="{{ '/meetings' | url }}">Find a Meeting</a>
+          <a class="nav-item nav-link" href="{{ '/for-newcomers' | url }}">For New-comers</a>
+          <a class="nav-item nav-link" href="{{ '/about-sa' | url }}">About SA</a>
+          <a class="nav-item nav-link" href="{{ '/service' | url }}">Service</a>
           <a class="nav-item nav-link" href="{{ '/contact' | url }}">Contact Us</a>
-          <a class="nav-item nav-link" href="{{ '/intergroup' | url }}">Intergroup</a>
           {# <div class="nav-item dropdown">
             <a class="nav-item nav-link dropdown-toggle" href="{{ '/get-involved' | url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Get Involved
