--- a/_src/assets/theme.css
+++ b/_src/assets/theme.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
 }
@@ -6,24 +10,28 @@ h1, h2, h3 {
   font-weight: 800;
 }
 
-/* footer #logo-footer {
-  width: 200px;
-} */
+.h6 {
+  font-weight: 800;
+  text-transform: uppercase;
+  font-size: 1.1rem;
+  margin-top: 1.5rem;
+}
 
-/* .navbar-brand img {
-  display: block;
-  width: auto;
-  height: 100px;
-  transition: 0.2s;
-} */
+.hero {
+  background-image: url('/assets/default.jpg');
+  min-height: 300px;
+  height: 50vh;
+  margin-top: 50px;
+  margin-bottom: -3rem;
+}
 
 .parallax {
   background-size: cover;
-  background-attachment: fixed;
-  background-position: top center;
+  background-position: center center;
+  background-repeat: no-repeat;
   border-radius: 0px;
   margin-top: 50px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
 
 .lh2 {
@@ -59,17 +67,8 @@ h1, h2, h3 {
   color: #1b4388;
 }
 
-/* .btn-primary {
-  background-color: #1b4388;
-  border-color: #1b4388;
-} */
-
 .font-size-smaller {
   font-size: 0.8rem;
-}
-
-.meetings {
-  /* table-layout: fixed; */
 }
 
 .meetings-time {
