--- a/_src/for-newcomers.njk
+++ b/_src/for-newcomers.njk
@@ -1,4 +1,35 @@
 ---
 layout: page
-pageHeading: For Newcomers
+pageHeading: For New-comers
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h2>What is SA?</h2>
+      <p>Sexaholics Anonymous is a fellowship of men and women who share their experience, strength, and hope with each other that they may solve their common problem and help others to recover. The only requirement for membership is a desire to stop lusting and become sexually sober. There are no dues or fees for SA membership; we are self-supporting through our own contributions. SA is not allied with any sect, denomination, politics, organization, or institution; does not wish to engage in any controversy; neither endorses nor opposes any causes. Our primary purpose is to stay sexually sober and help others to achieve sexual sobriety. *</p>
+      <p>Sexaholics Anonymous is a recovery program based on the principles of Alcoholics Anonymous and received permission from AA to use its Twelve Steps and Twelve Traditions in 1979.</p>
+      <p>
+        <small class="text-muted">
+          * Adapted with permission from The AA Grapevine, Inc.<br>
+          SA adaptation © 1982, 1989, 2001 SA Literature.<br>
+          Reprinted with permission of SA Literature.
+        </small>
+      </p>
+      <div class="text-center my-5">
+        <a href="{{ '/meetings' | url }}" class="btn btn-primary">Join us in a meeting</a>
+      </div>
+      <h2>There is a solution</h2>
+      <p>We have a solution. We don’t claim it’s for everybody, but for us, it works. If you identify with us and think you may share our problem, we’d like to share our solution with you (Sexaholics Anonymous, last sentence, page 2).</p>
+      <p>In defining sobriety, we do not speak for those outside Sexaholics Anonymous. We can only speak for ourselves. Thus, for the married sexaholic, sexual sobriety means having no form of sex with self or with persons other than the spouse. In SA’s sobriety definition, the term “spouse” refers to one’s partner in a marriage between a man and a woman. For the unmarried sexaholic, sexual sobriety means freedom from sex of any kind. And for all of us, single and married alike, sexual sobriety also includes progressive victory over lust (Sexaholics Anonymous, 191-192).</p>
+      <p>The only requirement for SA membership is a desire to stop lusting and become sexually sober according to the SA sobriety definition.</p>
+      <p>Any two or more sexaholics gathered together for SA sobriety according to SA sobriety definition may call themselves an SA group.</p>
+      <p>Meetings that do not adhere to and follow Sexaholics Anonymous’ sobriety statement as set forth in the foregoing Statement of Principle adopted by the General Delegate Assembly in 2010 are not SA meetings and shall not call themselves SA meetings.</p>
+      <p>
+        <small class="text-muted">
+          Addendum to the Statement of Principle passed by the General Delegate Assembly on July 8, 2016.
+        </small>
+      </p>
+    </div>
+  </div>
+</div>
