--- a/_src/contact.njk
+++ b/_src/contact.njk
@@ -5,7 +5,7 @@ pageHeading: Contact Us
 
 <div class="container">
   <div class="row">
-    <div class="col-6 offset-3">
+    <div class="col-12 offset-0 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
       <p class="lead">Anyone who turns to SA can be assured that his or her anonymity will be protected.</p>
       <p>For more information contact us at:</p>
       <p class="adr">
