--- a/_src/service.njk
+++ b/_src/service.njk
@@ -8,9 +8,9 @@ pageHeading: Service in SAIUT
     <div class="col-12 col-md-3">
       <nav>
         <ul class="list-unstyled">
-          <li><a href="#bylaws">SAIUT Bylaws</a></li>
-          <li><a href="#correction-facilities">Correction Facilities</a></li>
-          <li><a href="#minutes">Intergroup Meeting Minutes</a></li>
+          <li class="mb-3"><a href="#bylaws">SAIUT Bylaws</a></li>
+          <li class="mb-3"><a href="#correction-facilities">Correction Facilities</a></li>
+          <li class="mb-3"><a href="#minutes">Intergroup Meeting Minutes</a></li>
         </ul>
       </nav>
     </div>
