--- a/_src/about-sa.njk
+++ b/_src/about-sa.njk
@@ -8,8 +8,8 @@ pageHeading: About SA
     <div class="col-12 col-md-3">
       <nav>
         <ul class="list-unstyled">
-          <li><a href="#about">About SA</a></li>
-          <li><a href="#steps">The 12 Steps</a></li>
+          <li class="mb-3"><a href="#about">About SA</a></li>
+          <li class="mb-3"><a href="#steps">The 12 Steps</a></li>
         </ul>
       </nav>
     </div>
