--- a/_src/index.njk
+++ b/_src/index.njk
@@ -1,3 +1,46 @@
 ---
-layout: home
+layout: base
 ---
+
+<div class="hero jumbotron parallax text-white text-center">
+  <div class="container d-flex h-100 flex-column justify-content-center align-items-center">
+    <h1 class="text-uppercase display-4 font-weight-bold">SA Utah</h1>
+    <p class="h5 font-weight-bold">If you want the solution that we’ve found, we’d love to share it with you. Join us at a meeting near you.</p>
+    <p class="my-3">
+      <a href="{{ '/meetings' | url }}" class="btn btn-primary">Find a Meeting</a>
+    </p>
+  </div>
+</div>
+<div class="container bg-white shadow-sm p-4 p-sm-5">
+  <div class="row">
+    <div class="col-12 col-md-4">
+      <div class="card mb-4 mb-sm-0">
+        <img src="{{ '/assets/web-conf.jpg' | url }}" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">Meetings and Social Distancing</h5>
+          <p class="card-text">Contact the meeting organizer to find details for connecting remotely.</p>
+          <p class="card-text">Read <a href="https://www.sa.org/sa-covid-19-statement-2/">SA’s statement on the COVID-19 situation</a>.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card mb-4 mb-sm-0">
+        <img src="{{ '/assets/retreat.jpg' | url }}" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">2020 SA &amp; S-Anon Utah Retreat</h5>
+          <p class="card-text">Save the date! October 9-10, 2020 at the Salt Lake Community College Miller Campus</p>
+          <a href="http://sautahretreats.org/" class="btn btn-outline-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="card mb-4 mb-sm-0">
+        <img src="{{ '/assets/international.jpg' | url }}" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">2021 SA International Retreat</h5>
+          <p class="card-text">Salt Lake City, Utah will host the 2021 International Retreat.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
