Last changes before launch

--- a/_src/_includes/partials/_nav.njk
+++ b/_src/_includes/partials/_nav.njk
@@ -13,7 +13,7 @@
         <div class="navbar-nav ml-auto">
           {# <a class="nav-item nav-link" href="#">Home</a> #}
           <a class="nav-item nav-link" href="{{ '/meetings' | url }}">Find a Meeting</a>
-          <a class="nav-item nav-link" href="{{ '/for-newcomers' | url }}">For New-comers</a>
+          <a class="nav-item nav-link" href="{{ '/for-newcomers' | url }}">For Newcomers</a>
           <a class="nav-item nav-link" href="{{ '/about-sa' | url }}">About SA</a>
           <a class="nav-item nav-link" href="{{ '/service' | url }}">Service</a>
           <a class="nav-item nav-link" href="{{ '/contact' | url }}">Contact Us</a>
