--- a/_src/assets/theme.css
+++ b/_src/assets/theme.css
@@ -71,6 +71,11 @@ h1, h2, h3 {
   font-size: 0.8rem;
 }
 
+.home .card-img-top {
+  height: 220px;
+  object-fit: cover;
+}
+
 .meetings-time {
   width: 20%;
 }
