--- a/_src/for-newcomers.njk
+++ b/_src/for-newcomers.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-pageHeading: For New-comers
+pageHeading: For Newcomers
 ---
 
 <div class="container">
@@ -24,7 +24,7 @@ pageHeading: For New-comers
       <p>In defining sobriety, we do not speak for those outside Sexaholics Anonymous. We can only speak for ourselves. Thus, for the married sexaholic, sexual sobriety means having no form of sex with self or with persons other than the spouse. In SA’s sobriety definition, the term “spouse” refers to one’s partner in a marriage between a man and a woman. For the unmarried sexaholic, sexual sobriety means freedom from sex of any kind. And for all of us, single and married alike, sexual sobriety also includes progressive victory over lust (Sexaholics Anonymous, 191-192).</p>
       <p>The only requirement for SA membership is a desire to stop lusting and become sexually sober according to the SA sobriety definition.</p>
       <p>Any two or more sexaholics gathered together for SA sobriety according to SA sobriety definition may call themselves an SA group.</p>
-      <p>Meetings that do not adhere to and follow Sexaholics Anonymous’ sobriety statement as set forth in the foregoing Statement of Principle adopted by the General Delegate Assembly in 2010 are not SA meetings and shall not call themselves SA meetings.</p>
+      <p>Meetings that do not adhere to and follow Sexaholics Anonymous’ sobriety statement as set forth in the foregoing Statement of Principle adopted by the General Delegate Assembly in 2016 are not SA meetings and shall not call themselves SA meetings.</p>
       <p>
         <small class="text-muted">
           Addendum to the Statement of Principle passed by the General Delegate Assembly on July 8, 2016.
