--- a/_src/_includes/page.njk
+++ b/_src/_includes/page.njk
@@ -4,11 +4,17 @@ images:
   jumbotron: default.jpg
 pageHeading: Default Title
 ---
-<div class="jumbotron parallax" style="background-image: url({{ '/assets/' | url }}{{ images.jumbotron }})">
+
+<div class="jumbotron parallax mb-0" style="background-image: url({{ '/assets/' | url }}{{ images.jumbotron }})">
   <div class="container">
     <h1 class="my-5 text-center text-white text-uppercase display-4 font-weight-bold">{{ pageHeading }}</h1>
   </div>
 </div>
-<div class="mt-2 mt-sm-5">
-{{ content | safe }}
+<div class="py-2 py-sm-5">
+  <div class="container">
+    {% if title %}
+    <h2 class="mb-3">{{ title }}</h2>
+    {% endif %}
+    {{ content | safe }}
+  </div>
 </div>
