--- a/_src/index.njk
+++ b/_src/index.njk
@@ -1,6 +1,9 @@
 ---
 layout: base
+bodyClass: home
 ---
+{% set home_news = collections.news | reverse %}
+{% set news_feature_size = 3 %}
 
 <div class="hero jumbotron parallax text-white text-center">
   <div class="container d-flex h-100 flex-column justify-content-center align-items-center">
@@ -13,34 +16,35 @@ layout: base
 </div>
 <div class="container bg-white shadow-sm p-4 p-sm-5">
   <div class="row">
+    {%- for post in home_news.slice(0, news_feature_size) -%}
     <div class="col-12 col-md-4">
       <div class="card mb-4 mb-sm-0">
-        <img src="{{ '/assets/web-conf.jpg' | url }}" class="card-img-top">
+        <img src="{{ '/assets/' + post.data.image | url }}" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Meetings and Social Distancing</h5>
-          <p class="card-text">Contact the meeting organizer to find details for connecting remotely.</p>
-          <p class="card-text">Read <a href="https://www.sa.org/sa-covid-19-statement-2/">SA’s statement on the COVID-19 situation</a>.</p>
+          <h2 class="card-title h5">{{ post.data.title }}</h2>
+          <p class="card-text">{{ post.data.exerpt }}</p>
+          <a href="{{ post.url | url }}" class="btn btn-outline-primary">Read More</a>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-4">
-      <div class="card mb-4 mb-sm-0">
-        <img src="{{ '/assets/retreat.jpg' | url }}" class="card-img-top">
+    {%- endfor -%}
+  </div>
+  <h2 class="text-center mt-5 mb-3">Other News</h2>
+  <div class="row">
+    {%- for post in home_news.slice(news_feature_size, home_news.length) -%}
+    <div class="col col-sm-6">
+      <div class="card mb-4">
         <div class="card-body">
-          <h5 class="card-title">2020 SA &amp; S-Anon Utah Retreat</h5>
-          <p class="card-text">Save the date! October 9-10, 2020 at the Salt Lake Community College Miller Campus</p>
-          <a href="http://sautahretreats.org/" class="btn btn-outline-primary">Learn More</a>
+          <h3 class="card-title h5">{{ post.data.title }}</h3>
+          <p class="card-text">{{ post.data.exerpt }}</p>
+          <a href="{{ post.url | url }}" class="card-link">Read More</a>
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-4">
-      <div class="card mb-4 mb-sm-0">
-        <img src="{{ '/assets/international.jpg' | url }}" class="card-img-top">
-        <div class="card-body">
-          <h5 class="card-title">2021 SA International Retreat</h5>
-          <p class="card-text">Salt Lake City, Utah will host the 2021 International Retreat.</p>
-        </div>
-      </div>
-    </div>
+  {% if loop.index % 2 === 0 %}
+  </div>
+  <div class="row">
+  {% endif %}
+    {%- endfor -%}
   </div>
 </div>
