--- a/_src/service.njk
+++ b/_src/service.njk
@@ -9,7 +9,7 @@ pageHeading: Service in SAIUT
       <nav>
         <ul class="list-unstyled">
           <li class="mb-3"><a href="#bylaws">SAIUT Bylaws</a></li>
-          <li class="mb-3"><a href="#correction-facilities">Correction Facilities</a></li>
+          <li class="mb-3"><a href="#correctional-facilities">Correctional Facilities</a></li>
           <li class="mb-3"><a href="#minutes">Intergroup Meeting Minutes</a></li>
         </ul>
       </nav>
@@ -19,8 +19,8 @@ pageHeading: Service in SAIUT
         <h2>SAIUT Bylaws</h2>
         <a href="{{ '/assets/documents/SAIUT_ByLaws.pdf' | url }}" class="btn btn-primary btn-sm">SAIUT Bylaws Document</a>
       </div>
-      <div id="correction-facilities" class="mb-5">
-        <h2>SA Utah Intergroup Corrections Initiative</h2>
+      <div id="correctional-facilities" class="mb-5">
+        <h2>SA Utah Intergroup Correctional Initiative</h2>
         <p>The Utah State Prison has approved the beginning of SA meetings at the Draper prison.  This is marvelous opportunity for experienced SA members to perform valuable 12th Step service by volunteering to staff these meetings.  What we have to share is our experience, strength and hope.</p>
         <h3 class="h6">The following requirements apply:</h3>
         <ol>
@@ -35,12 +35,12 @@ pageHeading: Service in SAIUT
         <p>Volunteer training sessions are held on the 2nd Saturday and following Wednesday of each month, excluding August and December. The Saturday trainings are from 9:00-11:00 AM and Wednesday sessions are from 2:00-4:00 PM. All training sessions are held at the Fred House Academy, 14727 Minuteman Drive, Draper, UT. This building is located on the east side of I-15 directly across from the prison site. Access via the frontage road. Background requirements are handled during the training, so bring your driver license and social security card.</>
         <p>As soon as you are trained and have received your identification card, contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a> to get onto the staffing list.</p>
         <h3 class="h6">Sponsors by mail</h3>
-        <p>Many inmates have requested sponsors by mail and we have more requests from inmates than we have sponsors. If you are willing to sponsor an inmate, contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a>. Basic qualification for sponsorship applies: You have current white-book sobriety and have worked the steps at least to step 4 and are committed to stay ahead of your sponsees in the steps. Sponsors by mail will contact their inmate sponsees via the SA Intergroup PO Box and will never share personal address, phone, email, etc. This is an opportunity for 12th step service for those who are willing to be a recovery lifeline for an inmate but are unable to attend meetings at the prison for any reason.</p>
-        <p>Please contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a> and provide your First Name Last Initial and phone number with the days and times you are willing and able to assist:-)  Please state you are looking to assist with the prison initiative. Thanks for your your help!</p>
+        <p>Many inmates have requested sponsors by mail and we have more requests from inmates than we have sponsors. If you are willing to sponsor an inmate, contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a>. Basic qualification for sponsorship applies: You have current sobriety as defined in the SA sobriety definition and have worked the steps at least to step 4 and are committed to stay ahead of your sponsees in the steps. Sponsors by mail will contact their inmate sponsees via the SA Intergroup PO Box and will never share personal address, phone, email, etc. This is an opportunity for 12th step service for those who are willing to be a recovery lifeline for an inmate but are unable to attend meetings at the prison for any reason.</p>
+        <p>Please contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a> and provide your first name, first initial of last name, and phone number. Also indicate the days and times you are willing and able to assist with a prision meeting, or that you are willing to serve as a sponsor by mail.</p>
       </div>
-      <div id="minutes" class="mb-5">
+      {# <div id="minutes" class="mb-5">
         <h2>Intergroup Meeting Minutes (Propose keeping in Google Drive)</h2>
-      </div>
+      </div> #}
     </div>
   </div>
 </div>
