Adjust metatitle frontmatter

--- a/_src/about-sa.njk
+++ b/_src/about-sa.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About Sexaholics Anonymous in Utah
+metaTitle: About Sexaholics Anonymous in Utah
 pageHeading: About SA
 ---
 
