--- a/_src/contact.njk
+++ b/_src/contact.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Contact Sexaholics Anonymous Utah
+metaTitle: Contact Sexaholics Anonymous Utah
 pageHeading: Contact Us
 ---
 
