--- a/_src/index.njk
+++ b/_src/index.njk
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Sexaholics Anonymous in Utah
+metaTitle: Sexaholics Anonymous in Utah
 bodyClass: home
 ---
 {% set home_news = collections.news | reverse %}
