--- a/_src/for-newcomers.njk
+++ b/_src/for-newcomers.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Sexaholics Anonymous for Newcomers
+metaTitle: Sexaholics Anonymous for Newcomers
 pageHeading: For Newcomers
 ---
 
