--- a/_src/service.njk
+++ b/_src/service.njk
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Service Opportunities in Sexaholics Anonymous in Utah
+metaTitle: Service Opportunities in Sexaholics Anonymous in Utah
 pageHeading: Service in SAIUT
 ---
 
