--- a/_src/assets/theme.css
+++ b/_src/assets/theme.css
@@ -17,6 +17,10 @@ h1, h2, h3 {
   margin-top: 1.5rem;
 }
 
+.jumbotron {
+  background-color: #333;
+}
+
 .hero {
   background-image: url('/assets/default.jpg');
   min-height: 300px;
