--- a/_src/_includes/page.njk
+++ b/_src/_includes/page.njk
@@ -2,12 +2,12 @@
 layout: base
 images:
   jumbotron: default.jpg
-pageHeading: Default Title
+page_heading: Default Title
 ---
 
 <div class="jumbotron parallax mb-0" style="background-image: url({{ '/assets/' | url }}{{ images.jumbotron }})">
   <div class="container">
-    <h1 class="my-5 text-center text-white text-uppercase display-4 font-weight-bold">{{ pageHeading }}</h1>
+    <h1 class="my-5 text-center text-white text-uppercase display-4 font-weight-bold">{{ page_heading }}</h1>
   </div>
 </div>
 <div class="py-2 py-sm-5">
