--- a/_src/about-sa.njk
+++ b/_src/about-sa.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: About Sexaholics Anonymous in Utah
-pageHeading: About SA
+page_heading: About SA
 ---
 
 <div class="container">
