--- a/_src/contact.njk
+++ b/_src/contact.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: Contact Sexaholics Anonymous Utah
-pageHeading: Contact Us
+page_heading: Contact Us
 ---
 
 <div class="container">
