--- a/_src/meetings.njk
+++ b/_src/meetings.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: Sexaholics Anonymous Meetings in Utah
-pageHeading: Meetings & Groups
+page_heading: Meetings & Groups
 pagination:
  data: meetings.locations
  size: 1000
