--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -20,7 +20,7 @@ social:
 
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>{{ metaTitle }}</title>
+		<title>{{ metaTitle or title or page_heading }}</title>
 		<meta name="title" content="{{ title }}">
 		{# <meta name="description" content="{{ social.description }}"> #}
 		{# {% include "partials/_opengraph.njk" %} #}
