--- a/_src/about-sa.njk
+++ b/_src/about-sa.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: About Sexaholics Anonymous in Utah
-page_heading: About SA
+title: About SA
 ---
 
 <div class="container">
