--- a/_src/for-newcomers.njk
+++ b/_src/for-newcomers.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: Sexaholics Anonymous for Newcomers
-page_heading: For Newcomers
+title: For Newcomers
 ---
 
 <div class="container">
