--- a/_src/service.njk
+++ b/_src/service.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: Service Opportunities in Sexaholics Anonymous in Utah
-page_heading: Service in SAIUT
+title: Service in SAIUT
 ---
 
 <div class="container">
