--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -41,8 +41,8 @@ social:
 		<footer class="mt-auto py-5 bg-light">
 			<div class="container text-center">
 				{# <img id="logo-footer" src="{{ '/assets/uclt-logo.png' | url }}" alt=""> #}
-				<h3 class="text-uppercase h6 font-weight-bold" style="letter-spacing:0.2rem">Sexaholics Anonymous Utah Intergroup</h3>
-				<p class="adr mt-4"><span class="street-address">4989 South State Street #57601</span>, <span>Murray</span>, <span class="region">Utah</span> <span class="postal-code">84107-0601</span><br>
+				<h3 class="text-uppercase h6 font-weight-bold" style="letter-spacing:0.2rem">Sexaholics Anonymous Intergroup Utah (SAIUT)</h3>
+				<p class="adr mt-4"><span class="street-address">138 E 12300 S, Ste C-460</span>, <span>Draper</span>, <span class="region">Utah</span> <span class="postal-code">84020-7976</span><br>
 					<a class="d-inline-block mx-3" href="mailto:saintergrouputah@gmail.com">saintergrouputah@gmail.com</a>
 					<a class="d-inline-block mx-3" href="tel:3857438872">(385) 743-8872</a></p>
 				<p class="text-muted">
