Add meeting minutes link

--- a/_src/service.njk
+++ b/_src/service.njk
@@ -39,9 +39,10 @@ title: Service in SAIUT
         <p>Many inmates have requested sponsors by mail and we have more requests from inmates than we have sponsors. If you are willing to sponsor an inmate, contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a>. Basic qualification for sponsorship applies: You have current sobriety as defined in the SA sobriety definition and have worked the steps at least to step 4 and are committed to stay ahead of your sponsees in the steps. Sponsors by mail will contact their inmate sponsees via the SA Intergroup PO Box and will never share personal address, phone, email, etc. This is an opportunity for 12th step service for those who are willing to be a recovery lifeline for an inmate but are unable to attend meetings at the prison for any reason.</p>
         <p>Please contact <a href="mailto:sa.ig.utah@gmail.com">sa.ig.utah@gmail.com</a> and provide your first name, first initial of last name, and phone number. Also indicate the days and times you are willing and able to assist with a prision meeting, or that you are willing to serve as a sponsor by mail.</p>
       </div>
-      {# <div id="minutes" class="mb-5">
-        <h2>Intergroup Meeting Minutes (Propose keeping in Google Drive)</h2>
-      </div> #}
+      <div id="minutes" class="mb-5">
+        <h2>Intergroup Meeting Minutes</h2>
+        <p><a href="https://drive.google.com/drive/folders/1UEX6M8JL03YeO_T3gxLdwrYAtU2EognQ?usp=sharing">Minutes Drive</a></p>
+      </div>
     </div>
   </div>
 </div>
