--- a/_src/_includes/partials/_nav.njk
+++ b/_src/_includes/partials/_nav.njk
@@ -17,7 +17,7 @@
           <a class="nav-item nav-link" href="{{ '/about-sa' | url }}">About SA</a>
           <a class="nav-item nav-link" href="{{ '/service' | url }}">Service</a>
           <a class="nav-item nav-link" href="{{ '/contact' | url }}">Contact Us</a>
-          <a class="nav-item nav-link" href="{{ '/donate' | url }}">Donate</a>
+          <a class="nav-item nav-link" href="{{ '/contribute' | url }}">Contribute</a>
           {# <div class="nav-item dropdown">
             <a class="nav-item nav-link dropdown-toggle" href="{{ '/get-involved' | url }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Get Involved
