In an effort to improve being able to handle how the users are able to contact. We have included more information in the Contact Us and in the Service pages. In favor of not creating more pages.

--- a/_src/_includes/contact.njk
+++ b/_src/_includes/contact.njk
@@ -9,6 +9,14 @@ title: Default Title
 <div class="col-12 offset-0 col-md-10 offset-md-1 col-lg-6 offset-lg-3">
     <p class="lead">{{ lead }}</p>
     <p>For more information contact us at:</p>
+    <p>
+      <strong>If you are interested in attending a meeting:</strong><br>
+      Please contact the <strong>Secretary</strong> of the meeting for details and information.
+    </p>
+    <p>
+      <strong>If you are a member of an SA group and interested in serving :</strong><br>
+      Please contact your group's <strong>GSR (Group Service Representative)</strong> for guidance on service opportunities, or reach out to SA Intergroup Utah for more information.
+    </p>
     <p class="adr">
     <div class="org"><strong>{{ org.name }}</strong></div>
     <div class="email"><a href="mailto:{{ org.email }}">{{ org.email }}</a></div>
