Update the Visit the previous meeting minutes to open in a new window.

--- a/_src/service.njk
+++ b/_src/service.njk
@@ -78,7 +78,7 @@ title: Service in SAIUT
       </div>
       <div id="minutes" class="mb-5">
         <h2>Intergroup Meeting Minutes</h2>
-        <p><a href="https://drive.google.com/drive/folders/1UEX6M8JL03YeO_T3gxLdwrYAtU2EognQ?usp=sharing">Minutes Drive</a></p>
+        <p><a href="https://drive.google.com/drive/folders/1UEX6M8JL03YeO_T3gxLdwrYAtU2EognQ?usp=sharing" target="_blank" rel="noopener">Visit the previous meeting minutes</a></p>
       </div>
     </div>
   </div>
