--- a/_src/assets/theme.css
+++ b/_src/assets/theme.css
@@ -96,3 +96,9 @@ h1, h2, h3 {
 .meetings-notes {
   width: 40%;
 }
+
+.active-tab-underline {
+  border-bottom: 3px solid #1b4388;
+  color: #1b4388 !important;
+  background: transparent;
+}
