--- a/_src/service.njk
+++ b/_src/service.njk
@@ -1,7 +1,7 @@
 ---
 layout: page
 metaTitle: Service Opportunities in Sexaholics Anonymous in Utah
-title: Service in SAIUT
+title: Service in SA Intergroup UT
 ---
 
 <div class="container">
@@ -9,7 +9,7 @@ title: Service in SAIUT
     <div class="col-12 col-md-3">
       <nav>
         <ul class="list-unstyled">
-          <li class="mb-3"><a href="#bylaws">SAIUT Bylaws</a></li>
+          <li class="mb-3"><a href="#bylaws">SA Intergroup UT Bylaws</a></li>
           <li class="mb-3"><a href="#correctional-facilities">Correctional Facilities</a></li>
           <li class="mb-3"><a href="#guidance-gsr">Guidance for Group Service Representatives (GSRs)</a></li>
           <li class="mb-3"><a href="#minutes">Intergroup Meeting Minutes</a></li>
@@ -19,7 +19,7 @@ title: Service in SAIUT
     <div class="col-12 col-md-9">
       <div id="bylaws" class="mb-5">
         <h2>SAIUT Bylaws</h2>
-        <a href="{{ '/assets/documents/SAIUT_ByLaws.pdf' | url }}" class="btn btn-primary btn-sm">SAIUT Bylaws Document</a>
+        <a href="{{ '/assets/documents/SAIUT_ByLaws.pdf' | url }}" class="btn btn-primary btn-sm">SA Intergroup UT Bylaws Document</a>
       </div>
       <div id="correctional-facilities" class="mb-5">
         <h2>SA Utah Intergroup Correctional Initiative</h2>
