--- a/_src/_includes/base.njk
+++ b/_src/_includes/base.njk
@@ -48,7 +48,7 @@ social:
 				<p class="text-muted">
 				&copy;
 				<script>document.write(new Date().getFullYear());</script>
-				SAIUT
+				SA Intergroup UT
 				</p>
 			</div>
 		</footer>
