--- a/_src/about-sa.njk
+++ b/_src/about-sa.njk
@@ -11,6 +11,7 @@ title: About SA
         <ul class="list-unstyled">
           <li class="mb-3"><a href="#about">About SA</a></li>
           <li class="mb-3"><a href="#steps">The 12 Steps</a></li>
+          <li class="mb-3"><a href="/past-events">Past Events</a></li>
         </ul>
       </nav>
     </div>
@@ -49,7 +50,7 @@ title: About SA
         <p>
           <small class="text-muted">
             The Twelve Steps and Traditions are adapted with permission of Alcoholics Anonymous World Services, Inc. (“AAWS”). Permission to adapt and reprint the Twelve Steps and Twelve Traditions does not mean that AAWS has approved the contents, of this publication, nor that AAWS agrees with the views expressed herein. AA is a program of recovery from alcoholism only. Use of the Twelve Steps and Twelve Traditions in connection with programs which are patterned after AA, but which address other problems, or in any other non-AA context, does not imply otherwise.
-          </small>  
+          </small>
         </p>
         <p>
           <small class="text-muted">
