--- a/_src/index.njk
+++ b/_src/index.njk
@@ -37,7 +37,10 @@ bodyClass: home
             <h2 class="card-title h5">{{ post.data.title }}</h2>
             <p class="card-text">{{ post.data.excerpt }}</p>
             <p class="card-text"><strong>Date:</strong> {{ post.data.startDate }}{% if post.data.endDate %} - {{ post.data.endDate }}{% endif %}</p>
-            <a href="{{ post.url | url }}" class="btn btn-outline-primary">Read More</a>
+            {% if post.data.registration %}
+              <a href="{{ post.data.registration }}" class="btn btn-primary mb-2" target="_blank" rel="noopener">Register Now</a>
+            {% endif %}
+            <a class="btn btn-outline-primary mb-2"  href="{{ post.url | url }}" class="btn btn-outline-primary">Read More</a>
           </div>
         </div>
       </div>
