Add sa.org links

--- a/_src/index.njk
+++ b/_src/index.njk
@@ -19,7 +19,8 @@ bodyClass: home
   <div class="row mb-4">
     <div class="col-12">
       <div class="alert alert-info text-center" style="font-size:1.25rem;">
-        <strong>Vision:</strong> To provide connection, support, and service opportunities for the recovering sexaholic in Utah. Learn more on our <a href="{{ '/about-sa' | url }}">About SA</a> and <a href="{{ '/for-newcomers' | url }}">For Newcomers</a> pages.
+        <p><strong>Vision:</strong> To provide connection, support, and service opportunities for the recovering sexaholic in Utah. Learn more on our <a href="{{ '/about-sa' | url }}">About SA</a> and <a href="{{ '/for-newcomers' | url }}">For Newcomers</a> pages.</p>
+        <p>To learn more about the SA fellowship, please visit <a href="https://www.sa.org">sa.org</a>.</p>
       </div>
     </div>
   </div>
